feat: add copy and paste

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <div id="COLOR_PICKER" class="tool" data-tool-type="COLOR_PICKER-SELECT">取色</div>
     </div>
     <div id="PASTE_BAR" class="hidden">
-        <canvas id="COPY_SELECTED">你的浏览器不支持 canvas</canvas>
-        <div id="PASTE" data-tool-type="PASTE-CLICK">右键粘贴 <span style="color: red;">X</span></div>
+        <canvas id="COPY_SELECT">你的浏览器不支持 canvas</canvas>
+        <span id="PASTE_CLOSE" data-tool-type="PASTE_CLOSE-CLICK">关闭<span style="color: red;">X</span></span>
+        <span id="PASTE" data-tool-type="PASTE-CLICK">点击粘贴（右键也可）</span>
     </div>
 </body>
 
