--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <canvas id="GRID">你的浏览器不支持 canvas</canvas>
-    <canvas id="CANVAS">你的浏览器不支持 canvas</canvas>
-    <div id="TOOL_BAR">
-        <div id="PEN" class="tool" title="画笔">
-            <div class="glass" data-tool-type="PEN-SELECT"></div>
+    <canvas id="grid">你的浏览器不支持 canvas</canvas>
+    <canvas id="canvas">你的浏览器不支持 canvas</canvas>
+    <div id="tool-bar">
+        <div id="pen" class="tool" title="画笔">
+            <div class="glass" data-type="pen-select"></div>
             <svg t="1581521796967" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="3381">
                 <path
@@ -23,14 +23,14 @@
                 <path d="M433.247897 247.830118h157.504206L512 58.825943z" fill="#274B6D" p-id="3383"></path>
                 <path
                     d="M360.548286 620.502776c56.46595 0 108.082065-25.538985 138.072179-68.316022a16.342597 16.342597 0 0 1 26.75907 0c29.992294 42.779216 81.606229 68.316022 138.072179 68.316022 26.510695 0 52.380846-5.740934 75.638709-16.658512L604.369118 280.510955h-184.738236l-134.721305 323.33113c23.260041 10.919757 49.128013 16.660691 75.638709 16.660691z"
-                    fill="#FFCC75" p-id="3384"></path>
+                    fill="#ffcc75" p-id="3384"></path>
                 <path
                     d="M776.167922 611.071086l-0.006537-0.130723a16.301202 16.301202 0 0 0-1.248408-6.093887L630.367813 257.93939l-0.095863-0.228766-103.188654-247.655384a16.340419 16.340419 0 0 0-30.166592 0l-103.197369 247.674992-0.076255 0.183013-144.556057 346.933231a16.312095 16.312095 0 0 0-1.248408 6.111317c-0.008715 0.174298-0.008715 396.701789-0.008715 396.701788a16.340419 16.340419 0 0 0 16.340418 16.340419h495.659364c9.026447 0 16.340419-7.313971 16.340418-16.340419l-0.002178-396.588495zM512 801.184231a16.340419 16.340419 0 0 0-16.340419 16.340419V991.319163h-215.148844V637.610105c25.050951 10.235638 52.274088 15.57133 80.037549 15.571329 51.202157 0 99.197234-17.909099 135.111295-49.260915v148.242456a16.340419 16.340419 0 0 0 16.340419 16.340419c9.026447 0 16.340419-7.313971 16.340419-16.340419V603.920519c35.91624 31.353995 83.911317 49.260915 135.111295 49.260915 27.763461 0 54.988777-5.335691 80.037549-15.571329V991.319163H528.340419v-173.794513a16.340419 16.340419 0 0 0-16.340419-16.340419zM419.630882 280.510955h184.738236l134.721305 323.33113c-23.260041 10.919757-49.128013 16.658512-75.638709 16.658512-56.46595 0-108.079886-25.538985-138.072179-68.316022a16.336061 16.336061 0 0 0-26.75907 0c-29.990115 42.779216-81.606229 68.316022-138.072179 68.316022-26.510695 0-52.378667-5.740934-75.638709-16.658512l134.721305-323.33113z m13.617015-32.680837L512 58.825943l78.752103 189.004175h-157.504206z"
                     fill="#082947" p-id="3385"></path>
             </svg>
         </div>
-        <div id="ERASE" class="tool" title="橡皮擦">
-            <div class="glass" data-tool-type="ERASE-SELECT"></div>
+        <div id="erase" class="tool" title="橡皮擦">
+            <div class="glass" data-type="erase-select"></div>
             <svg t="1581522424174" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="16247">
                 <path
@@ -41,8 +41,8 @@
                     fill="#e8989a" p-id="16249"></path>
             </svg>
         </div>
-        <div id="FILL" class="tool" title="填充">
-            <div class="glass" data-tool-type="FILL-SELECT"></div>
+        <div id="fill" class="tool" title="填充">
+            <div class="glass" data-type="fill-select"></div>
             <svg t="1581522183756" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="8820">
                 <path
@@ -50,8 +50,8 @@
                     p-id="8821" fill="#e8989a"></path>
             </svg>
         </div>
-        <div id="COPY" class="tool" title="复制">
-            <div class="glass" data-tool-type="COPY-CLICK"></div>
+        <div id="copy" class="tool" title="复制">
+            <div class="glass" data-type="copy-click"></div>
             <svg t="1581523117423" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="20830">
                 <path
@@ -65,8 +65,8 @@
                     fill="#e8989a" p-id="20833"></path>
             </svg>
         </div>
-        <div id="UNDO" class="tool" title="撤回">
-            <div class="glass" data-tool-type="UNDO-CLICK"></div>
+        <div id="undo" class="tool" title="撤回">
+            <div class="glass" data-type="undo-click"></div>
             <svg t="1581522451800" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="17035">
                 <path
@@ -74,8 +74,8 @@
                     fill="#e8989a" p-id="17036"></path>
             </svg>
         </div>
-        <div id="REDO" class="tool" title="前进">
-            <div class="glass" data-tool-type="REDO-CLICK"></div>
+        <div id="redo" class="tool" title="前进">
+            <div class="glass" data-type="redo-click"></div>
             <svg t="1581522378567" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="15240">
                 <path
@@ -83,8 +83,8 @@
                     fill="#e8989a" p-id="15241"></path>
             </svg>
         </div>
-        <div id="CLEAR" class="tool" title="清空">
-            <div class="glass" data-tool-type="CLEAR-CLICK"></div>
+        <div id="clear" class="tool" title="清空">
+            <div class="glass" data-type="clear-click"></div>
             <svg t="1581522478471" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="17854">
                 <path
@@ -92,19 +92,19 @@
                     p-id="17855" fill="#e8989a"></path>
             </svg>
         </div>
-        <div id="COLOR_PICKER" class="tool" title="取色">
-            <div class="glass" data-tool-type="COLOR_PICKER-SELECT"></div>
+        <div id="color-picker" class="tool" title="取色">
+            <div class="glass" data-type="color-picker-select"></div>
             <svg t="1581522519546" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="18282">
                 <path
                     d="M802.763096 375.276174a42.238513 42.238513 0 0 1-59.73123 0l-30.078941-29.865615-119.675787-119.675787-29.865615-30.057608a42.302511 42.302511 0 1 1 59.944556-59.73123l29.865615 29.865615 119.675787 119.654454 29.865615 29.865615a42.238513 42.238513 0 0 1 0 59.944556z"
-                    fill="#ADB5D5" p-id="18283"></path>
+                    fill="#adb5d5" p-id="18283"></path>
                 <path
                     d="M892.573267 46.135762a84.711684 84.711684 0 0 1 0 119.675787l-119.675786 119.654454-119.675787-119.654454 119.675787-119.675787a84.583689 84.583689 0 0 1 119.675786 0z"
                     fill="#e8989a" p-id="18284"></path>
                 <path
                     d="M712.952925 345.410559L653.008369 405.355115H413.656796l179.620342-179.620343 119.675787 119.675787z"
-                    fill="#DEE3F3" p-id="18285"></path>
+                    fill="#dee3f3" p-id="18285"></path>
                 <path
                     d="M234.676431 938.669671a63.997747 63.997747 0 0 1-127.995494 0c0-35.412087 42.665164-106.662911 63.997747-106.662911s63.997747 71.229492 63.997747 106.662911zM653.008369 405.355115L413.870122 644.472029l-89.810172 29.865615-59.73123 59.944556a42.494504 42.494504 0 0 1-59.944556 0 42.665164 42.665164 0 0 1 0-59.944556l59.944556-59.73123 29.865615-89.788839 119.462461-119.46246z"
                     fill="#e8989a" p-id="18286"></path>
@@ -116,12 +116,12 @@
                     fill="#e8989a" p-id="18288"></path>
                 <path
                     d="M623.356079 135.945934a41.982522 41.982522 0 0 0-59.944556 0c-0.149328 0.127995-0.234658 0.319989-0.383986 0.447984l239.266242 239.266242 0.469317-0.383986a42.238513 42.238513 0 0 0 0-59.944556l-29.865615-29.865615-119.675787-119.654454z"
-                    fill="#CCD3EB" p-id="18289"></path>
+                    fill="#ccd3eb" p-id="18289"></path>
                 <path d="M653.221694 165.790216l33.62015-33.598817 119.675787 119.675787-33.598818 33.598817z"
                     fill="#e8989a" p-id="18290"></path>
                 <path
                     d="M653.115032 285.572665l-59.731231-59.73123L558.931681 260.293555l29.673622 29.673622a42.665164 42.665164 0 0 1 0 60.328543L533.332582 405.355115h119.675787l25.599098-25.599099 34.345458-34.345457z"
-                    fill="#DEE3F3" p-id="18291"></path>
+                    fill="#dee3f3" p-id="18291"></path>
                 <path
                     d="M204.405497 734.2822a42.473171 42.473171 0 0 0 59.923223 0l59.73123-59.944556 89.810172-29.865615L653.008369 405.355115H533.332582z"
                     fill="#e8989a" p-id="18292"></path>
@@ -148,8 +148,8 @@
                     p-id="18299"></path>
             </svg>
         </div>
-        <div id="DOWNLOAD_IMAGE" class="tool" title="下载图片">
-            <div class="glass" data-tool-type="DOWNLOAD_IMAGE-CLICK"></div>
+        <div id="download-image" class="tool" title="下载图片">
+            <div class="glass" data-type="download-image-click"></div>
             <svg t="1581522561463" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="19062">
                 <path
@@ -157,8 +157,8 @@
                     p-id="19063" fill="#e8989a"></path>
             </svg>
         </div>
-        <div id="TOGGLE_GRID" class="tool" title="网格">
-            <div class="glass" data-tool-type="TOGGLE_GRID-CLICK"></div>
+        <div id="toggle-grid" class="tool" title="网格">
+            <div class="glass" data-type="toggle-grid-click"></div>
             <svg t="1581522600897" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="19859">
                 <path
@@ -166,17 +166,18 @@
                     p-id="19860" fill="#e8989a"></path>
             </svg>
         </div>
-        <div id="PALETTE">
-            <div id="CURRENT_COLOR" data-tool-type="CURRENT_COLOR-PICK" title="点击显示颜色选择器"></div>
-            <input id="COLOR_FORMAT" type="text" data-tool-type="COLOR_FORMAT-INPUT" title="输入颜色（支持rgb、hex格式）" />
-            <canvas id="COLOR_SELECTOR" class="hidden" data-tool-type="COLOR_SELECTOR-PICK">你的浏览器不支持 canvas</canvas>
+        <div id="palette">
+            <div id="current-color" data-type="current-color-pick" title="点击显示颜色选择器"></div>
+            <input id="color-format" type="text" data-type="color-format-input" title="输入颜色（支持rgb、hex格式）" />
+            <div id="color-grid" data-type="color-grid-pick"></div>
+            <canvas id="color-selector" class="hidden" data-type="color-selector-pick">你的浏览器不支持 canvas</canvas>
         </div>
     </div>
-    <div id="PASTE_BAR" class="hidden">
-        <canvas id="COPY_SELECT">你的浏览器不支持 canvas</canvas>
-        <span  class="tool" id="PASTE_CLOSE" data-tool-type="PASTE_CLOSE-CLICK">X</span>
-        <span class="tool" id="PASTE" title="点击粘贴（右键也可）">
-            <div class="glass" data-tool-type="PASTE-CLICK"></div>
+    <div id="paste-bar" class="hidden">
+        <canvas id="copy-select">你的浏览器不支持 canvas</canvas>
+        <span class="tool" id="paste-close" data-type="paste-close-click">X</span>
+        <span class="tool" id="paste" title="点击粘贴（右键也可）">
+            <div class="glass" data-type="paste-click"></div>
             <svg t="1581522340578" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 p-id="14310">
                 <path
